tree-sitter-smithyql/corpus/bindings-comma.txt
================================================================================
Simple let binding with trailing comma
================================================================================
let label = 42,
Op {}
--------------------------------------------------------------------------------

(ERROR
  (whitespace)
  (ERROR
    (binding
      (identifier)
      (whitespace)
      (whitespace)
      (input_node
        (number))))
  (whitespace)
  (identifier)
  (whitespace))
