tree-sitter-smithyql/corpus/bindings-multiple.txt
================================================================================
Multiple let bindings in one go
================================================================================
let label = 42,
let y = { a = "test", }
Op {}
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (whitespace)
    (binding
      (identifier)
      (whitespace)
      (whitespace)
      (input_node
        (number))))
  (whitespace)
  (top_level_statement
    (let_binding
      (whitespace)
      (binding
        (identifier)
        (whitespace)
        (whitespace)
        (input_node
          (struct
            (whitespace)
            (bindings
              (binding
                (identifier)
                (whitespace)
                (whitespace)
                (input_node
                  (string))))
            (whitespace))))))
  (whitespace)
  (ERROR
    (identifier)
    (whitespace)))
