tree-sitter-smithyql/corpus/comment.txt
================================================================================
File with comments
================================================================================
//comm
hello {}
--------------------------------------------------------------------------------

(source_file
  (comment)
  (whitespace)
  (top_level_statement
    (operation_call
      (operation_name
        (identifier))
      (whitespace)
      (struct))))
