tree-sitter-smithyql/corpus/just-query.txt
================================================================================
Just query, no use clause
================================================================================
hello {}
--------------------------------------------------------------------------------

(source_file
  (operation_name
    (identifier))
  (whitespace)
  (struct))
