tree-sitter-smithyql/corpus/service-reference.txt
================================================================================
Service reference
================================================================================
namespace#Service.OpName {}
--------------------------------------------------------------------------------

(source_file
  (operation_name
    (qualified_identifier
      (identifier)
      (identifier))
    (identifier))
  (whitespace)
  (struct))
