tree-sitter-smithyql/test/corpus/bindings.txt
================================================================================
Simple let binding
================================================================================
let label = 42
Op {}
--------------------------------------------------------------------------------

(source_file
  (top_level_statement
    (let_binding
      (whitespace)
      (binding
        (identifier)
        (whitespace)
        (whitespace)
        (input_node
          (number)))))
  (whitespace)
  (ERROR
    (identifier)
    (whitespace)))
