tree-sitter-smithyql/test/corpus/just-use.txt
================================================================================
Just use clause
================================================================================
use service playground.std#Clock
--------------------------------------------------------------------------------

(ERROR
  (use_clause
    (whitespace)
    (whitespace)
    (qualified_identifier
      (identifier)
      (identifier)
      (identifier))))
