tree-sitter-smithyql/test/corpus/statements.txt
================================================================================
Return statements
================================================================================

use service a.b#C

hello {
  a = 42,
  b = 50,
  c = {
    d = "foo",
    e=false,
    f=true,
    list = [ 50, 100, 100,
      [null, false, true, null, "a", 40, ]
      ],
  },
  nul = null,
}
--------------------------------------------------------------------------------

(source_file
  (whitespace)
  (use_clause
    (whitespace)
    (whitespace)
    (qualified_identifier
      (identifier)
      (identifier)
      (identifier)))
  (whitespace)
  (top_level_statement
    (operation_call
      (operation_name
        (identifier))
      (whitespace)
      (struct
        (whitespace)
        (bindings
          (binding
            (identifier)
            (whitespace)
            (whitespace)
            (input_node
              (number)))
          (whitespace)
          (binding
            (identifier)
            (whitespace)
            (whitespace)
            (input_node
              (number)))
          (whitespace)
          (binding
            (identifier)
            (whitespace)
            (whitespace)
            (input_node
              (struct
                (whitespace)
                (bindings
                  (binding
                    (identifier)
                    (whitespace)
                    (whitespace)
                    (input_node
                      (string)))
                  (whitespace)
                  (binding
                    (identifier)
                    (input_node
                      (boolean)))
                  (whitespace)
                  (binding
                    (identifier)
                    (input_node
                      (boolean)))
                  (whitespace)
                  (binding
                    (identifier)
                    (whitespace)
                    (whitespace)
                    (input_node
                      (list
                        (whitespace)
                        (list_fields
                          (input_node
                            (number))
                          (whitespace)
                          (input_node
                            (number))
                          (whitespace)
                          (input_node
                            (number))
                          (whitespace)
                          (input_node
                            (list
                              (list_fields
                                (input_node
                                  (null))
                                (whitespace)
                                (input_node
                                  (boolean))
                                (whitespace)
                                (input_node
                                  (boolean))
                                (whitespace)
                                (input_node
                                  (null))
                                (whitespace)
                                (input_node
                                  (string))
                                (whitespace)
                                (input_node
                                  (number)))
                              (whitespace))))
                        (whitespace)))))
                (whitespace))))
          (whitespace)
          (binding
            (identifier)
            (whitespace)
            (whitespace)
            (input_node
              (null))))
        (whitespace)))))
