tree-sitter-smithyql/test/corpus/struct-1.txt
================================================================================
Struct with 1 field
================================================================================
{ a = 42 }
--------------------------------------------------------------------------------

(source_file
  (top_level_statement
    (operation_call
      (operation_name
        (MISSING identifier))
      (struct
        (whitespace)
        (bindings
          (binding
            (identifier)
            (whitespace)
            (whitespace)
            (input_node
              (number))))
        (whitespace)))))
